# strands-agents-semantic-summarizing-conversation-manager

./: README.md  demo.py  embedding_providers.py  main.py  memory_estimator.py  message_container.py  message_utils.py  output.txt  pyproject.toml  semantic_conversation_manager.py  semantic_memory_hook.py  semantic_search.py  test_nova_embeddings.py  validate_nova_config.py
strands_semantic_memory/: __init__.py  embedding_providers.py  memory_estimator.py  message_container.py  message_utils.py  semantic_conversation_manager.py  semantic_memory_hook.py  semantic_search.py
